@@ -22,7 +22,7 @@ class MonerisTest < Test::Unit::TestCase
 
   def test_successful_purchase
     @gateway.expects(:ssl_post).returns(successful_purchase_response)
-  
+
     assert response = @gateway.authorize(100, @credit_card, @options)
     assert_success response
     assert_equal '58-0_3;1026.1', response.authorization
@@ -30,11 +30,11 @@ class MonerisTest < Test::Unit::TestCase
 
   def test_failed_purchase
     @gateway.expects(:ssl_post).returns(failed_purchase_response)
-  
+
     assert response = @gateway.authorize(100, @credit_card, @options)
     assert_failure response
   end
-  
+
   def test_deprecated_credit
     @gateway.expects(:ssl_post).with(anything, regexp_matches(/txn_number>123<\//), anything).returns("")
     @gateway.expects(:parse).returns({})
@@ -42,34 +42,34 @@ class MonerisTest < Test::Unit::TestCase
       @gateway.credit(@amount, "123;456", @options)
     end
   end
-  
+
   def test_refund
     @gateway.expects(:ssl_post).with(anything, regexp_matches(/txn_number>123<\//), anything).returns("")
     @gateway.expects(:parse).returns({})
     @gateway.refund(@amount, "123;456", @options)
   end
-  
+
   def test_amount_style
    assert_equal '10.34', @gateway.send(:amount, 1034)
-                                                      
+
    assert_raise(ArgumentError) do
      @gateway.send(:amount, '10.34')
    end
-  end                                                           
-  
+  end
+
   def test_purchase_is_valid_xml
-   params = { 
+   params = {
      :order_id => "order1",
      :amount => "1.01",
      :pan => "4242424242424242",
      :expdate => "0303",
-     :crypt_type => 7,                                                  
+     :crypt_type => 7,
    }
 
    assert data = @gateway.send(:post_data, 'preauth', params)
    assert REXML::Document.new(data)
    assert_equal xml_capture_fixture.size, data.size
-  end  
+  end
 
   def test_purchase_is_valid_xml
    params = {
@@ -86,23 +86,23 @@ class MonerisTest < Test::Unit::TestCase
   end
 
   def test_capture_is_valid_xml
-   params = { 
+   params = {
      :order_id => "order1",
      :amount => "1.01",
      :pan => "4242424242424242",
      :expdate => "0303",
-     :crypt_type => 7,                                                  
+     :crypt_type => 7,
    }
 
    assert data = @gateway.send(:post_data, 'preauth', params)
    assert REXML::Document.new(data)
    assert_equal xml_capture_fixture.size, data.size
-  end  
-  
+  end
+
   def test_supported_countries
     assert_equal ['CA'], MonerisGateway.supported_countries
   end
-  
+
   def test_supported_card_types
     assert_equal [:visa, :master, :american_express, :diners_club, :discover], MonerisGateway.supported_cardtypes
   end
@@ -113,8 +113,7 @@ class MonerisTest < Test::Unit::TestCase
     end
   end
 
-
- def test_successful_store
+  def test_successful_store
     @gateway.expects(:ssl_post).returns(successful_store_response)
     assert response = @gateway.store(@credit_card)
     assert_success response
@@ -189,10 +188,10 @@ class MonerisTest < Test::Unit::TestCase
     <TimedOut>false</TimedOut>
   </receipt>
 </response>
-    
+
     RESPONSE
   end
-  
+
   def failed_purchase_response
     <<-RESPONSE
 <?xml version="1.0"?>
@@ -214,9 +213,9 @@ class MonerisTest < Test::Unit::TestCase
     <TimedOut>false</TimedOut>
   </receipt>
 </response>
-    
+
     RESPONSE
-  end  
+  end
 
 
   def successful_store_response
@@ -269,5 +268,4 @@ class MonerisTest < Test::Unit::TestCase
   def xml_capture_fixture
    '<request><store_id>store1</store_id><api_token>yesguy</api_token><preauth><amount>1.01</amount><pan>4242424242424242</pan><expdate>0303</expdate><crypt_type>7</crypt_type><order_id>order1</order_id></preauth></request>'
   end
-
 end
