@@ -21,6 +21,7 @@
 * Eway Managed: Add 'query_customer' API as #retrieve [cdaloisio]
 * NetPay: Fix the signature for void [duff]
 * Cybersource: Add check support [bowmande]
+* Moneris: Use a capture of $0 for void [ntalbott]
 
 == Version 1.29.3 (December 7, 2012)
 
